frontend/App: fix overflow

--- a/frontend/src/components/App.scss
+++ b/frontend/src/components/App.scss
@@ -9,6 +9,7 @@ body {
   flex-direction: column;
 
   .main {
-    flex: 1; 
+    flex: 1;
+    overflow: scroll;
   }
 }
